11. Container With Most Water

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
         "13. RomanToInteger",
-        "1. Two Sum"
+        "1. Two Sum",
+        "11. Container With Most Water"
     ]
 }
