--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
         "13. RomanToInteger",
+        "11. Container With Most Water",
         "1. Two Sum",
-        "11. Container With Most Water"
+        "9. Palindrome Number"
     ]
 }
