--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,9 @@
 {
     "java.project.sourcePaths": [
+        "9. Palindrome Number",
         "13. RomanToInteger",
         "11. Container With Most Water",
         "1. Two Sum",
-        "9. Palindrome Number"
+        "74. Search a 2D Matrix"
     ]
 }
