--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
     "java.project.sourcePaths": [
         "9. Palindrome Number",
+        "74. Search a 2D Matrix",
         "13. RomanToInteger",
         "11. Container With Most Water",
         "1. Two Sum",
-        "74. Search a 2D Matrix"
+        "17. Letter Combinations of a Phone Number"
     ]
 }
