--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,10 @@
     "java.project.sourcePaths": [
         "9. Palindrome Number",
         "74. Search a 2D Matrix",
+        "17. Letter Combinations of a Phone Number",
         "13. RomanToInteger",
         "11. Container With Most Water",
         "1. Two Sum",
-        "17. Letter Combinations of a Phone Number"
+        "50. Pow(x, n)"
     ]
 }
