--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,11 @@
         "9. Palindrome Number",
         "74. Search a 2D Matrix",
         "50. Pow(x, n)",
+        "2225. Find Players With Zero or One Losses",
         "17. Letter Combinations of a Phone Number",
         "13. RomanToInteger",
         "11. Container With Most Water",
         "1. Two Sum",
-        "2225. Find Players With Zero or One Losses"
+        "55. Jump Game"
     ]
 }
