--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,13 @@
     "java.project.sourcePaths": [
         "9. Palindrome Number",
         "74. Search a 2D Matrix",
+        "55. Jump Game",
         "50. Pow(x, n)",
         "2225. Find Players With Zero or One Losses",
         "17. Letter Combinations of a Phone Number",
         "13. RomanToInteger",
         "11. Container With Most Water",
         "1. Two Sum",
-        "55. Jump Game"
+        "20. Valid Parentheses"
     ]
 }
