--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,12 @@
         "55. Jump Game",
         "50. Pow(x, n)",
         "2225. Find Players With Zero or One Losses",
+        "20. Valid Parentheses",
+        "198. House Robber",
         "17. Letter Combinations of a Phone Number",
         "13. RomanToInteger",
         "11. Container With Most Water",
         "1. Two Sum",
-        "20. Valid Parentheses"
+        "22. Generate Parentheses"
     ]
 }
